css/dashboard.css
@font-face {
  font-family: Inter;
  src: url("../fonts/Inter-Regular.ttf");
}

h1,
a,
body,
.tooltip,
.dashboard {
  font-family: Inter, Helvetica, sans-serif;
}

html, body {
  background-color: #FFFAEC;
  /* remove browser default settings */
  margin: 0;
  padding: 0;
}

*, *::before, *::after {
  box-sizing: border-box;
}

.navbar {
  background-color: #16404D;
  display: flex;
  align-items: center;
  height: 2.8rem;
  padding-inline: 1rem;
  border-bottom: 1px solid;
  justify-content: space-between;
}

.title {
  color: #FAF7F4;
  font-weight: 600;
  font-size: x-large;
}

.navbar ul,
.navbar li {
  list-style-type: none; /* remove the bullets */
  display: inline;
  color: #FAF7F4;
  font-weight: 500;
  padding: 10px;
}

a {
  color: inherit;
  text-decoration: none;
}


.dashboard-wrap {
  width: 100vw;
  height: calc(100vh - 2.8rem);
  overflow: hidden;
  position: relative;
  display: flex;
  flex-direction: column;
}

.dashboard {
  display: grid;
  grid-template-columns: 30rem 1fr;
  height: 100%;
  grid-template-rows: 1fr 245px;
  gap: 15px;
  padding: 10px;
  transform-origin: top left;
}

.visualization {
  padding: 1rem;
  background-color: #F5ECD5;
  border-radius: 24px;
}

/* -------MAP------- */
#map {
  background-color: white;
}

.zoom-button {
    cursor: pointer;
}

.zoom-button-bg {
    fill: #fff;
    stroke: #333;
    stroke-width: 1px;
}

.europe-outline {
    fill: #16404D;
    stroke: #333;
    stroke-width: 0.5px;
}

.zoom-button:hover .zoom-button-bg {
    fill: #f0f0f0;
}

.zoom-button:hover .zoom-icon {
  font-weight: 900;
}

/* --- NETWORK GRAPH --- */

#network-graph {
  overflow: visible;
  display: flex;
  position: relative;
  padding: 20px;
  height: 100%;
}

#network-graph svg {
  overflow: visible;
  flex: 1 1 auto;
  width:  100%;
  height: 100%;
}

.network-wrapper {
  margin: 0;
}

.tooltip {
  position: absolute;
  pointer-events: none;
  background: rgba(0, 0, 0, 0.7);
  color: #fff;
  padding: 4px 8px;
  border-radius: 4px;
  font-size: 10px;
  opacity: 0;
  visibility: hidden;
  transition: opacity 0.2s ease;
  z-index: 10;
}

.node circle,
.gender-circle {
  fill: #FFFAEC;
  stroke: #16404D;
  stroke-width: 1px;
  filter: drop-shadow(0 2px 4px rgba(0,0,0,0.1));
}

.gender-circle.female {
  fill: #dd9298;
}

.gender-circle.male {
  fill: #d0a07d;
}

.node text {
  font-size: 8px;
  text-anchor: middle;
  pointer-events: none;
}

.node {
  cursor: pointer;
}

.node.active circle {
  fill: #16404D;
}

.node.active text {
  fill: #FFFAEC;
  font-weight: 600;
}

.node.hovered circle {
  stroke-width: 1.5px;
}

.node.hovered text {
  font-weight: 500;
}

.node:hover circle {
  fill: #375A61;
}

.gender-label {
  fill: #FFFAEC;
}

.node text.gender-label {
  font-size: 14px;
}

svg:not(.node-active-mode) .node:hover text {
  fill: #FFFAEC;
  fill-opacity: 1;
}

.node-active-mode .node:not(.active):hover text {
  opacity: 0.65;
}

.node-active-mode .node.active:hover text {
  fill: #FFFAEC;
  fill-opacity: 1;
  font-weight: 600;
}

.gender-circle.female:hover {
  fill: #D1848A;
  cursor: pointer;
}

.gender-circle.male:hover {
  fill: #C3957A;
  cursor: pointer;
}

.node.active .gender-circle.female {
  fill: #DB6D76;
}
.node.active .gender-circle.male {
  fill: #D79260;
}

.link {
  mix-blend-mode: multiply;
  opacity: 0.6;
  fill: none;
  pointer-events: stroke;
  cursor: pointer;
}

.link.book {
  stroke: #A6CDC6;
}

.link.author {
  stroke: #578E7E;
}

.link.active.book,
.link.hovered {
  opacity: 1;
}

.link.active.author {
  stroke: #467265;
  opacity: 1;
}

.node-active-mode .node:not(.active) circle {
  fill: #F0EEE9;
  stroke-opacity: 0.37;
}

.node-active-mode .node:not(.active) text {
  opacity: 0.37;
}

.node-active-mode .node:not(.active) .gender-label {
  opacity: 0.37;
  fill:#16404D;
}

.node-active-mode .link {
  opacity: 0.6;
}

.legend {
  position: absolute;
  bottom: 20px;
  left: 20px;
  display: flex;
  flex-direction: column;
  gap: 5px;
}

.legend-item {
  display: flex;
  align-items: center;
}

.legend-item::before {
  content: "";
  display: inline-block;
  width: 15px;
  height: 15px;
  border-radius: 5px;
  margin-right: 4px;
  flex-shrink: 0;
}

.legend-item.author::before {
  background-color: #578E7E;
}

.legend-item.book::before {
  background-color: #A6CDC6;
}

.legend-item.author::after {
  content: "Authors in common";
}

.legend-item.book::after {
  content: "Books in common";
}

.legend-item::after {
  color: #16404D;
  font-family: Inter, Helvetica, sans-serif;
  font-size: 10px;
  font-weight: 400;
  white-space: nowrap;
  line-height: 1;
}

.group-toggle {
  position: absolute;
  bottom: 20px;
  right: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 8px;
}

.toggle-label {
  color: #16404D;
  font-family: Inter, Helvetica, sans-serif;
  font-size: 12px;
  font-weight: 500;
}

.switch {
  position: relative;
  width: 38px;
  height: 18px;
  cursor: pointer;
}

.switch::before {
  content: '';
  position: absolute;
  top: 0.5px;
  left: 0.5px;
  width: 37px;
  height: 17px;
  background: rgba(225, 216, 192, 0.66);
  border: 1px solid #16404D;
  border-radius: 8.5px;
  box-sizing: border-box;
}

.switch::after {
  content: '';
  position: absolute;
  top: 9px;
  left: 9px;
  width: 17px;
  height: 17px;
  background: #FAF7F4;
  border: 1px solid #16404D;
  border-radius: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
}

.switch:hover::before {
  background: rgba(225, 216, 192, 0.8);
}

.switch[aria-pressed="true"]::before {
  background: #16404D;
}

.switch[aria-pressed="true"]::after {
  left: 29px;
  top: 9px;
}

/* ---- TREEMAP ---- */

.mode-button {
  border-radius: 8px;
  padding: 3px 5px;
  font-size: 12px;
  border: 1px solid #16404D;
}

.mode-button.active {
  background-color: #16404D;
  color: white;
}

#treemap {
  display: flex;
  flex-direction: column;
  padding: 0.75rem 1.25rem;
  color: #16404D;
  width: 100%;
  position: relative;
}

#treemap-controls {
  display: flex;
  gap: 8px;
  margin-bottom: 8px;
}

#treemap-area {
  flex: 1;
  position: relative;
  width: 100%;
  margin-top: 10px;
}

#treemap-breadcrumbs {
  font-size: 12px;
  font-weight: bold;
  color: #16404D;
  margin-bottom: 10px;
  cursor: pointer;
}

#tooltip {
  position: absolute;
  background-color: rgba(0, 0, 0, 0.7);
  color: white;
  padding: 3px 6px;
  border-radius: 2px;
  pointer-events: none;
  visibility: hidden;
  z-index: 10;
  font-size: 12px;
}

/* ----CATALOG---- */

#catalog {
  grid-column: 2;
  grid-row: 2;
  display: flex; /* Limit the entries to the catalog area*/
  flex-direction: column;
  padding: 0.75rem 1.25rem;
  color: #16404D;
}

.search-container {
  display: flex;
  margin-bottom: 0.5rem;
}

#search-input {
  width: 100%;
  padding: 0.375rem 1.5rem 0.375rem 0;
  border: none;
  border-bottom: 0.5px solid;
  background: transparent;
  outline: none;
}

#search-input::placeholder {
  color: #aaa;
}

#search-icon {
  width: 15px;
  align-items: center;
}

.catalog-header {
  display: grid;
  grid-template-columns: 1fr 1fr 0.5fr;
  grid-template-rows: 30px;
  gap: 20px; /* Aligns with the entries */
  font-weight: 600;
  font-size: 1rem;
  align-items: center;
}

.sortable {
  display: flex;
  align-items: center;
  gap: 5px;
}

.sort-icon {
  width: 15px;
}

#catalog-entries {
  flex: 1 1 auto;
  overflow-y: auto; /* Enable vertical scroll */
  margin-bottom: 0.5rem;
}

.catalog-entry {
  display: grid;
  grid-template-columns: 1fr 1fr 0.5fr;
  gap: 20px;
  padding: 5px;
  margin: 10px 0;
  background: #FFFAEC;
  border-radius: 8px;
  box-shadow: 0 2px 4px rgba(0,0,0,0.05);
  font-size: 0.75rem;
  align-items: center;
}

.catalog-entry.male   {
  background:#D0A07D;
  color:#FFFAEC;
}

.catalog-entry.female {
  background:#DD9298;
  color:#FFFAEC;
}

/* Scrollbar styling */
#catalog-entries::-webkit-scrollbar {
  width: 8px;
}

#catalog-entries::-webkit-scrollbar-track {
  background: #f1f1f1;
}

#catalog-entries::-webkit-scrollbar-thumb:hover {
  background: #555;
}

#book-count {
  font-size: 0.75rem;
  display: flex;
  justify-content: flex-end;
}

